--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ pickle-email-*.html
 config/database.yml
 config/site.yml
 config/bigdiva_access.xml
+config/locales/en.yml
 RemoteSystemsTempFiles
 log
 .project
